ola-parser/src/testdata/syntaxTests/nameAndTypeResolution/420_interface_variables.sol
interface I {
    u256 a;
}
// ----
// TypeError 8274: (18-24): Variables cannot be declared in interfaces.
